# echonet

./: .env.example  .gitignore  CHANGES_SUMMARY.md  LICENSE  MIGRATION_SQLITE.md  README.md  STATE_MANAGEMENT.md  backup_registry.py  inspect_registry.py  inspect_state.py  migrate_db.py  pyproject.toml  pytest.ini  test_registry_migration.py  test_state_endpoint.py  test_state_management.py
app/: asr_worker.py  audio_io.py  discovery.py  echonet_client.py  forwarder.py  main.py  migrations.py  models.py  registry.py  router.py  security.py  settings.py  state.py
docs/: ASR_TESTING.md  ASR_WORKER.md  AUDIO_DEVICES.md  AUDIO_IMPLEMENTATION.md  CONFIG_API.md  README.md  STATE_MACHINE.md  TESTING.md
docs/adr/: 001-automatic-active-mode-reset.md  002-inactive-mode.md  README.md
tests/: README.md  TESTING_SUMMARY.md  __init__.py  test_active_mode_regression.py  test_audio_devices.py  test_config.py  test_inactive_mode.py  test_integration_modes.py  test_ring_buffer.py  test_wake_word_regression.py
tests/fixtures/: __init__.py
